assignment3-2/app-2-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-dep
  labels:
    app: app-2
    run: app-2-run
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
      run: app-2-run
  template:
    metadata:
      labels:
        app: app-2
        run: app-2-run
    spec:
      containers:
      - name: app-2
        image: ghcr.io/denoslab/ensf400-sample-app:v2
        ports:
        - containerPort: 3000
